<resources>
    <string name="app_name">KFL</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="wheel">Steering Wheel</string>
    <string name="ground">The Ground</string>
    <string name="window">Window Frame</string>
    <string name="sun">The Sun</string>
    <string name="cloud">A Cloud</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_about">About</string>
</resources>
